[metadata]
name = APtools
version = attr: aptools.__version__
description = A collection of tools for accelerator physics
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/AngelFP/APtools
author = Angel Ferran Pousa
author_email = angel.ferran.pousa@desy.de,
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    scipy
    h5py
    openpmd-api~=0.14.0,~=0.15.0
    deprecated
